--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       </section>
       
       <footer>
-        <a href="http://www2.clustrmaps.com/counter/maps.php?url=http://drewhop.github.io" id="clustrMapsLink"><img src="http://www2.clustrmaps.com/counter/index2.php?url=http://drewhop.github.io" style="border:0px;" alt="Locations of visitors to this page" title="Locations of visitors to this page" id="clustrMapsImg" /></a>
+        <a href="http://www2.clustrmaps.com/counter/maps.php?url=http://DR3WH0.github.io" id="clustrMapsLink"><img src="http://www2.clustrmaps.com/counter/index2.php?url=http://DR3WH0.github.io" style="border:0px;" alt="Locations of visitors to this page" title="Locations of visitors to this page" id="clustrMapsImg" /></a>
         <script type="text/javascript">
           function cantload()
           {
@@ -37,7 +37,7 @@
           img = document.getElementById("clustrMapsImg");
           img.onerror = cantload;
         </script>
-        <p>A <a href="https://github.com/drewhop/drewhop.github.io" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" target="tab">Andrew Weidner</a></p>
+        <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" target="tab">Andrew Weidner</a></p>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
       
