--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,65 +1,41 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+---
+---
+<!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <title> DR3WH0 {% if page.title %} | {{ page.title }} {% endif %} </title>
-  <link rel="stylesheet" href="/stylesheets/styles.css" type="text/css" media="screen" charset="utf-8"/>
-  <script src="/javascripts/scale.fix.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <title> DR3WH0 {% if page.title %} | {{ page.title }} {% endif %} </title>
+    <link rel="stylesheet" href="/stylesheets/styles.css" type="text/css" media="screen" charset="utf-8"/>
+    <script src="/javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
   <body>
     <div class="wrapper">
-    
       <header>
         <h1><a href="/index.html"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" /> DR3WH0</a></h1>
         <h3>Time Travel and Other Anomalies</h3>
-        <p class="view"><a href="/posts.html">Thoughts<small>the master list</small></a>
-        <p class="view"><a href="http://dr3wh0.tumblr.com/">Tumblr<small>daily back yard</small></a>
-        <p class="view"><a href="http://www.last.fm/user/DR3WH0">Last.fm<small>favorite tunes</small></a>
-        <p class="view"><a href="http://www.flickr.com/photos/dr3wh0/" target="tab">Flickr<small>lo-fi photography</small></a>
+        <p class="view"><a href="/archive.html" title="Thought Archive">Thoughts<small>the master list</small></a>
+        <p class="view"><a href="/tags.html" title="Tag List">Tags<small>idea graffiti</small></a>
+        <p class="view"><a href="http://dr3wh0.tumblr.com/" title="DR3WH0: Tumblr">Tumblr<small>daily back yard</small></a>
+        <p class="view"><a href="http://www.last.fm/user/DR3WH0" title="DR3WH0: Last.fm">Last.fm<small>favorite tunes</small></a>
+        <p class="view"><a href="http://www.flickr.com/photos/dr3wh0/"  title="DR3WH0: Flickr" target="tab">Flickr<small>lo-fi photography</small></a>
       </header>
-      
       <section id="main">
         {{ content }}
       </section>
-      
       <footer>
         <a href="http://www2.clustrmaps.com/counter/maps.php?url=http://DR3WH0.github.io" id="clustrMapsLink"><img src="http://www2.clustrmaps.com/counter/index2.php?url=http://DR3WH0.github.io" style="border:0px;" alt="Locations of visitors to this page" title="Locations of visitors to this page" id="clustrMapsImg" /></a>
-        <script type="text/javascript">
-          function cantload()
-          {
-            img = document.getElementById("clustrMapsImg");
-            img.onerror = null;
-            img.src = "http://clustrmaps.com/images/clustrmaps-back-soon.jpg";
-            document.getElementById("clustrMapsLink").href = "http://clustrmaps.com";
-          }
-          img = document.getElementById("clustrMapsImg");
-          img.onerror = cantload;
-        </script>
-        <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" target="tab">Andrew Weidner</a></p>
+        <script src="/javascripts/clustrmap.js"></script>
+        <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" title="Professional Portfolio" target="tab">Andrew Weidner</a></p>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
-      
     </div>
-          <!-- Start of StatCounter Code for Default Guide -->
-          <script type="text/javascript">
-          //<![CDATA[
-          var sc_project=9114352; 
-          var sc_invisible=1; 
-          var sc_security="f55f8078"; 
-          var scJsHost = (("https:" == document.location.protocol) ?
-          "https://secure." : "http://www.");
-          document.write("<sc"+"ript type='text/javascript' src='" +
-          scJsHost+
-          "statcounter.com/counter/counter_xhtml.js'></"+"script>");
-          //]]>
-          </script>
-          <noscript><div class="statcounter"><a title="web analytics"
-          href="http://statcounter.com/" class="statcounter"><img
-          class="statcounter"
-          src="http://c.statcounter.com/9114352/0/f55f8078/1/"
-          alt="web analytics" /></a></div></noscript>
-          <!-- End of StatCounter Code for Default Guide -->
+    <script src="/javascripts/statcounter.js"></script>
+    <noscript><div class="statcounter">
+      <a title="web analytics" href="http://statcounter.com/" class="statcounter">
+        <img class="statcounter"
+        src="http://c.statcounter.com/9114352/0/f55f8078/1/"
+        alt="web analytics" /></a>
+    </div></noscript>    
   </body>
 </html>
