add meta description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="/stylesheets/styles.css" type="text/css" media="screen" charset="utf-8"/>
     <script src="/javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="/index.html"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" /> DR3WH0</a></h1>
+        <h1><a href="/index.html" title="Recent Thoughts"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" /> DR3WH0</a></h1>
         <h3>Time Travel and Other Anomalies</h3>
         <p class="view"><a href="/archive.html" title="Thought Archive">Thoughts<small>the master list</small></a>
         <p class="view"><a href="/tags.html" title="Tag List">Tags<small>idea graffiti</small></a>
