--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
       <header>
         <h1><a href="/index.html" title="Recent Thoughts"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" /> DR3WH0</a></h1>
-        <h3>Time Travel and Other Anomalies</h3>
+        <h3>Time Travel &amp; Other Anomalies</h3>
         <p class="view"><a href="/archive.html" title="Thought Archive">Thoughts<small>the master list</small></a>
         <p class="view"><a href="/tags.html" title="Tag List">Tags<small>idea graffiti</small></a>
         <p class="view"><a href="http://dr3wh0.tumblr.com/" title="DR3WH0: Tumblr">Tumblr<small>daily back yard</small></a>
