fixed disqus.js src

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,5 +22,5 @@ layout: default
 </ul>
 
 <div id="disqus_thread"></div>
-<script type="/javascripts/disqus.js"></script>
+<script src="/javascripts/disqus.js"></script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
