re-enable disqus for css experiment

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,8 +21,6 @@ layout: default
   {% include JB/tags_list %}
 </ul>
 
-<!--
-<div id="disqus_thread"></div>
+<div id="disqus_thread"><p></p></div>
 <script src="/javascripts/disqus.js"></script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
--->
