--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,7 @@ layout: default
   {% include JB/tags_list %}
 </ul>
 
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a>.
 <!--
 <div id="disqus_thread"><p></p></div>
 <script src="/javascripts/disqus.js"></script>
