format cc license text

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,8 +21,7 @@ layout: default
   {% include JB/tags_list %}
 </ul>
 
-<hr/>
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0 text-alight:right" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a><br /><small style="text-alight:right">This post is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a>.</small>
+<p style="text-align:right"><a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a><br /><small>This post is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a>.</small></p>
 <!--
 <div id="disqus_thread"><p></p></div>
 <script src="/javascripts/disqus.js"></script>
