--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title> DR3WH0 {% if page.title %} | {{ page.title }} {% endif %} </title>
-    <link rel="stylesheet" href="/stylesheets/styles.css" type="text/css" media="screen" charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css" media="screen" charset="utf-8"/>
+    <link rel="icon" type="image/png" href="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_favicon.png"/>
     <script src="/javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
