--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
   {{content}}
 </article>
 
-<p style="text-align:right"><a href="/guestbook.html"><b>COMMENTS >>></b></a></p>
+<p style="text-align:right"><small><a href="/guestbook.html"><b>COMMENTS >>></b></a></small></p>
 <hr/>
 
 {% include JB/setup %}
