--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -83,7 +83,7 @@ blockquote {
 }
 
 code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+  font:Inconsolata, Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, sans-serif;
   color:#333;
   font-size:12px;
 }
