--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,7 +5,7 @@ body {
   font:Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#777;
   font-weight:300;
-  font-size:14px;
+  font-size:14px/1.5;
 }
 
 h4 {
