--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,10 +2,9 @@
 
 body {
   padding:50px;
-  font:Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#777;
   font-weight:300;
-  font-size:14px/1.5;
 }
 
 h4 {
