add twitter link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
         <p class="view"><a href="/tags.html" title="Tag List">Tags<small>idea graffiti</small></a>
         <p class="view"><a href="http://dr3wh0.tumblr.com/" title="DR3WH0: Tumblr">Tumblr<small>daily back yard</small></a>
         <p class="view"><a href="http://www.last.fm/user/DR3WH0" title="DR3WH0: Last.fm">Last.fm<small>favorite tunes</small></a>
+        <p class="view"><a href="https://twitter.com/DR3WH0" title="DR3WH0: Twitter">Twitter<small>realtime tunes</small></a>
         <p class="view"><a href="http://www.flickr.com/photos/dr3wh0/"  title="DR3WH0: Flickr" target="tab">Flickr<small>lo-fi photography</small></a>
       </header>
       <section id="main">
