--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,11 @@
     {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
   </head>
   <body>
+    <!-- SCM Music Player http://scmplayer.net -->
+    <script type="text/javascript" src="http://scmplayer.net/script.js" 
+      data-config="{'skin':'skins/black/skin.css','volume':42,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Aphex Twin - Avril 14th','url':'http://www.youtube.com/watch?v=MBFXJw7n-fU'},{'title':'Low - Fearless (P.Floyd Cover)','url':'http://www.youtube.com/watch?v=2LyEcWxI3UQ'},{'title':'Radiohead Acoustic Collection','url':'http://www.youtube.com/watch?v=qDK0ZxVBHoA'},{'title':'Stars Of The Lid - December Hunting ','url':'http://www.youtube.com/watch?v=u-MXZDkcPKM'}]}" ></script>
+    <!-- SCM Music Player script end -->
+
     <div class="wrapper">
       <header>
         <h1 class="default"><a href="/index.html" title="Recent Thoughts"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" /> DR3WH0</a></h1>
