--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- SCM Music Player http://scmplayer.net -->
-    <script type="text/javascript" src="/javascripts/scmplayer.js" 
+    <script type="text/javascript" src="http://scmplayer.net/script.js" 
       data-config="{'skin':'skins/simpleBlack/skin.css','volume':42,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Aphex Twin - Avril 14th','url':'http://www.youtube.com/watch?v=MBFXJw7n-fU'},{'title':'Low - Fearless (P.Floyd Cover)','url':'http://www.youtube.com/watch?v=2LyEcWxI3UQ'},{'title':'Radiohead Acoustic Collection','url':'http://www.youtube.com/watch?v=qDK0ZxVBHoA'},{'title':'Stars Of The Lid - December Hunting ','url':'http://www.youtube.com/watch?v=u-MXZDkcPKM'},{'title':'Abfarhrt Hinwil - Radiowellen','url':'http://t.co/JrzTapEmhw'}]}" ></script>
     <!-- SCM Music Player script end -->
 
