--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,22 @@
 ---
+tracks:
+  track:
+    name: Aphex Twin - Avril 14th
+    url: http://www.youtube.com/watch?v=MBFXJw7n-fU
+  track:
+    name: Low - Fearless (P.Floyd Cover)
+    url: http://www.youtube.com/watch?v=2LyEcWxI3UQ
+  track:
+    name: Radiohead Acoustic Collection
+    url: http://www.youtube.com/watch?v=qDK0ZxVBHoA
+  track:
+    name: Stars Of The Lid - December Hunting
+    url: http://www.youtube.com/watch?v=u-MXZDkcPKM
+  track:
+    name: Abfarhrt Hinwil - Radiowellen
+    url: http://t.co/JrzTapEmhw
 ---
+<!-- {'title':'Aphex Twin - Avril 14th','url':'http://www.youtube.com/watch?v=MBFXJw7n-fU'},{'title':'Low - Fearless (P.Floyd Cover)','url':'http://www.youtube.com/watch?v=2LyEcWxI3UQ'},{'title':'Radiohead Acoustic Collection','url':'http://www.youtube.com/watch?v=qDK0ZxVBHoA'},{'title':'Stars Of The Lid - December Hunting ','url':'http://www.youtube.com/watch?v=u-MXZDkcPKM'},{'title':'Abfarhrt Hinwil - Radiowellen','url':'http://t.co/JrzTapEmhw'}  -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -14,7 +31,7 @@
   <body>
     <!-- SCM Music Player http://scmplayer.net -->
     <script type="text/javascript" src="http://scmplayer.net/script.js" 
-      data-config="{'skin':'skins/simpleBlack/skin.css','volume':42,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Aphex Twin - Avril 14th','url':'http://www.youtube.com/watch?v=MBFXJw7n-fU'},{'title':'Low - Fearless (P.Floyd Cover)','url':'http://www.youtube.com/watch?v=2LyEcWxI3UQ'},{'title':'Radiohead Acoustic Collection','url':'http://www.youtube.com/watch?v=qDK0ZxVBHoA'},{'title':'Stars Of The Lid - December Hunting ','url':'http://www.youtube.com/watch?v=u-MXZDkcPKM'},{'title':'Abfarhrt Hinwil - Radiowellen','url':'http://t.co/JrzTapEmhw'}]}" ></script>
+      data-config="{'skin':'skins/simpleBlack/skin.css','volume':42,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{% for track in page.tracks %}{'title':'{{track.name}}','url':'{{track.url}}'}{% unless track.last %},{% endunless %}{% endfor %}]}"></script>
     <!-- SCM Music Player script end -->
 
     <div class="wrapper">
