--- a/skins/simpleBlue/skin.css
+++ b/skins/simpleBlue/skin.css
@@ -1,4 +1,4 @@
-#player,#player a{ color:#333; }
+#player,#player a{ color:#084670; }
 #player{ background:url(sizerAndVol.png); background-position: bottom !important; background-repeat: repeat-x !important; }
 #player .mainImage{ background:url(main.png); }
 
@@ -15,16 +15,15 @@
 #player #list{ right:5px; }
 
 #player #seeker{ right:320px; }
-#player #seekerBase{ border-color:#666; }
-#player #seekerBuffered{ background-color:#DDD; }
-#player #seekerSliderBase{ background-color:#666; }
+#player #seekerBase{ border-color:#084670; }
+#player #seekerBuffered{ background-color:#dbf6ff; }
+#player #seekerSliderBase{ background-color:#084670; }
 
 #player #volume{ width:70px; right:33px; }
 #player #volumeSlider{ width:14px; background:url(sizerAndVol.png); }
 
-#playlist,#playlist .module,#playlist h3{ border-color:#333;}
-#playlist .module{  color:#333; background-color:white; }
-#playlist h3{ color:#fff; background-color:#333;  }
-#playlist .even{background-color:white;}
-#playlist .odd{ background-color:#eee;}
-#playlist .focus{ background-color:#666; color:#FFF;}
+#playlist,#playlist .module,#playlist h3{ border-color:#03385c; color:#084670; }
+#playlist h3{ background-color: #084670; color:#FFF;}
+#playlist .even{background-color:#FFF;}
+#playlist .odd{ background-color:#dff6ff;}
+#playlist .focus{ background-color:#084670; color:#FFF;}
