--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css" media="screen" charset="utf-8"/>
     <link rel="icon" type="image/png" href="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_favicon.png"/>
     <script src="/javascripts/scale.fix.js"></script>
-    <script type="text/javascript" src="/javascripts/liquidescape.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
   </head>
@@ -46,5 +45,6 @@
         src="http://c.statcounter.com/9114352/0/f55f8078/1/"
         alt="web analytics" /></a>
     </div></noscript>    
+    <script defer src="/javascripts/liquidescape.js"></script>
   </body>
 </html>
