--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,8 @@
         <img class="statcounter"
         src="http://c.statcounter.com/9114352/0/f55f8078/1/"
         alt="web analytics" /></a>
-    </div></noscript>    
-    <script defer src="/javascripts/liquidescape.js"></script>
+    </div></noscript>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascripts/liquidescape.js"></script>
   </body>
 </html>
