--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
       <footer>
         <a href="http://www2.clustrmaps.com/counter/maps.php?url=http://DR3WH0.github.io" id="clustrMapsLink"><img src="http://www2.clustrmaps.com/counter/index2.php?url=http://DR3WH0.github.io" style="border:0px;" alt="Locations of visitors to this page" title="Locations of visitors to this page" id="clustrMapsImg" /></a>
         <script src="/javascripts/clustrmap.js"></script>
-        <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" title="Professional Portfolio" target="tab">Andrew Weidner</a></p>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" title="Professional Portfolio" target="tab">A.W.</a></p>
+        <p><small>Host: <a href="http://pages.github.com">GitHub</a> &mdash; Theme: <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="/javascripts/statcounter.js"></script>
