--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <h1 class="default"><a href="/index.html" title="Recent Thoughts"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" /> DR3WH0</a></h1>
         <h3>Time Travel &amp; Other Anomalies</h3>
         <p class="view"><a href="/archive.html" title="Thought Archive">Thoughts<small>the master list</small></a>
-        <p class="view"><a href="/tags.html" title="Tag List">Tags<small>idea graffiti</small></a>
+        <p class="view"><a href="/tags.html" title="Tag List">Tags<small>idea graffiti</small></a> | <a href="/categories.html" title="Category List">Cats<small>idea herds</small></a>
         <p class="view"><a href="http://dr3wh0.tumblr.com/" title="DR3WH0: Tumblr">Tumblr<small>daily back yard</small></a>
         <p class="view"><a href="http://www.last.fm/user/DR3WH0" title="DR3WH0: Last.fm">Last.fm<small>favorite tunes</small></a>
         <p class="view"><a href="https://twitter.com/DR3WH0" title="DR3WH0: Twitter">Twitter<small>realtime tunes</small></a>
