--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
         {{ content }}
       </section>
       <footer>
-        <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" title="Professional Portfolio" target="tab">Andrew Weidner</a><br />
+        <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" title="Professional Portfolio" target="tab">A. Weidner</a><br />
         <small>Hosted on <a href="http://pages.github.com">GitHub Pages</a></small><br />
         <small>Theme by <a href="https://github.com/orderedlist">orderedlist</a></small><br />
         <small><a href="http://statcounter.com/p9114352/?guest=1">Stats for DR3WH0.NET</a></small><br />
