--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       </section>
       <footer>
         <p>A <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">site</a> by <a href="http://andrewweidnerportfolio.weebly.com" title="Professional Portfolio" target="tab">A. Weidner</a><br />
-        <small><a href="http://statcounter.com/p9114352/?guest=1">Stats for DR3WH0.NET</a></small><br />
+        <small><a href="http://statcounter.com/p9114352/?guest=1" title="StatCounter Statistics">Stats for DR3WH0.NET</a></small><br />
         <script src="/javascripts/statcounter.js"></script>
         <noscript><div class="statcounter">
           <a title="website statistics" href="http://statcounter.com/" class="statcounter">
