--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         <noscript><div class="statcounter">
           <a title="website statistics" href="http://statcounter.com/" class="statcounter">
           <img class="statcounter" src="http://c.statcounter.com/9114352/0/f55f8078/0/" alt="website statistics" /></a>
-        </div></noscript>  <small><a href="/feed.xml">RSS Feed</a></small></p>
+        </div></noscript> &nbsp; <small><a href="/feed.xml">RSS Feed</a></small></p>
       </footer>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
