--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,5 +44,6 @@
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script type="text/javascript" src="/javascripts/liquidescape.js"></script>
+    <script src="/javascripts/analytics.js"></script>
   </body>
 </html>
