--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,7 @@
 <html>
   {% include head.html %}
   <body>
-    <!-- SCM Music Player http://scmplayer.net -->
-        <script type="text/javascript" src="http://dr3wh0.net/musicplayer/script.js" 
-        data-config="{'skin':'skins/simpleBlack/skin.css','volume':42,'autoplay':false,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':true,'playlist':[{% for track in site.tracks %}{'title':'{{ track.name }}','url':'{{ track.url }}'}{% unless forloop.last %},{% endunless %}{% endfor %}]}" ></script>
-    <!-- SCM Music Player script end -->
-
+    {% include scm.html %}
     <div class="wrapper">
       {% include header.html %}
       <section id="main">
