--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,6 @@
       </section>
       {% include footer.html %}
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script type="text/javascript" src="/javascripts/liquidescape.js"></script>
-    <script type="text/javascript" src="/javascripts/analytics.js"></script>
+    {% include scripts.html %}
   </body>
 </html>
