--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <p><a href="/about.html" title="About This Site">ABOUT</a> | <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">SOURCE</a><br />
+  <p><small><a href="/about.html" title="About This Site">ABOUT</a> | <a href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">SOURCE</a></small><br />
   <small><a href="http://statcounter.com/p9114352/?guest=1" title="StatCounter Statistics">DR3WH0 Statistics</a></small><br />
   <script src="/javascripts/statcounter.js"></script>
   <noscript><div class="statcounter">
