radio post links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article>
-  <h2>{{page.title}}{% if page.category == "radio" %}{% if page.catalog == "true" %}&nbsp;&nbsp;<a href="{{ page.url }}-catalog"><small>CATALOG</small>{% endif %}{% endif %}</h2>
+  <h2>{{page.title}}</h2>
   <hr/>
 
   {% if page.description %}
