--- a/musicplayer/js/view/playlist.html
+++ b/musicplayer/js/view/playlist.html
@@ -3,7 +3,7 @@
 		<h3>Playlist</h3> 
 	</div> 
   <div class="module" id="playlistContainer">
-    <ol class="items" data-bind="style:{bottom:showAd()?'150px':'0'}"> 
+    <ul class="items" data-bind="style:{bottom:showAd()?'150px':'0'}"> 
       <!-- ko foreach:playlist -->
 			<li class="item" data-bind="
 			visible:isValid(),
@@ -13,7 +13,7 @@
 				<span class="title" data-bind="text:title"></span>&nbsp;
 			</li> 
       <!-- /ko -->
-		</ol> 
+		</ul> 
     <div class="odd" data-bind="visible:showAd" 
       style="z-index:167; position:absolute; height:150px; left:0; right:0; bottom:0; padding:0 10px;" >
       <!-- BuySellAds Zone Code -->
