--- a/musicplayer/js/view/player.html
+++ b/musicplayer/js/view/player.html
@@ -33,7 +33,7 @@
 			"></div> 
 	</div> 
 	<div class="text" id="tooltip"> 
-		<!--<a href="http://scmplayer.net" target="_blank" >--><p>DR3WH0.NET Jukebox</p><!--</a>--> 
+		<a href="/radio.html">DR3WH0.NET Radio</a> 
 	</div> 
 	<div class="text item" id="timer" data-bind="text:timer"></div> 
 	<div class="item ui-slider-horizontal" data-bind="
