--- a/musicplayer/js/view/player.html
+++ b/musicplayer/js/view/player.html
@@ -33,7 +33,7 @@
 			"></div> 
 	</div> 
 	<div class="text" id="tooltip"> 
-		<a href="/">DR3WH0 Radio</a> 
+		<a href="">DR3WH0 Radio</a> 
 	</div> 
 	<div class="text item" id="timer" data-bind="text:timer"></div> 
 	<div class="item ui-slider-horizontal" data-bind="
