--- a/musicplayer/js/view/player.html
+++ b/musicplayer/js/view/player.html
@@ -32,8 +32,8 @@
 			style:{width:(loadedFraction()*100)+'%'}
 			"></div> 
 	</div> 
-	<div class="text" id="tooltip"> 
-		<a href="">DR3WH0 Radio</a> 
+	<div class="text"> 
+		<p>DR3WH0 Radio</p> 
 	</div> 
 	<div class="text item" id="timer" data-bind="text:timer"></div> 
 	<div class="item ui-slider-horizontal" data-bind="
