--- a/musicplayer/js/view/player.html
+++ b/musicplayer/js/view/player.html
@@ -32,7 +32,7 @@
 			style:{width:(loadedFraction()*100)+'%'}
 			"></div> 
 	</div> 
-	<div class="text"> 
+	<div class="text" class="tooltip"> 
 		<p>DR3WH0 Radio</p> 
 	</div> 
 	<div class="text item" id="timer" data-bind="text:timer"></div> 
