comment out tag conditionals

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
 <head prefix="dc: http://purl.org/dc/terms/">
   <meta charset="utf-8" />
   <meta name="author" content="DR3WH0">
-  {% if page.tags %}<meta name="keywords" content="{% for tag in page.tags %}{{ tag }}, {% endfor %}">{% endif %}
-  {% else %}<meta name="keywords" content="Prose, Poetry, Photos, Music">{% endif %}
+  <!--{% if page.tags %}<meta name="keywords" content="{% for tag in page.tags %}{{ tag }}, {% endfor %}">{% endif %}
+  {% else %}<meta name="keywords" content="Prose, Poetry, Photos, Music">{% endif %}-->
   <title>DR3WH0 {% if page.title %} | {{ page.title }} {% endif %}</title>
   <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css" media="screen" charset="utf-8"/>
   <link rel="icon" type="image/png" href="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_favicon.png"/>
@@ -17,7 +17,7 @@
   <meta property="dc:type" content="Blog" />
   <meta property="dc:format" content="text/html" />
   <meta property="dc:language" content="en" />
-  {% if page.tags %}
+  <!--{% if page.tags %}
     {% for tag in page.tags %}<meta property="dc:subject" content="{{ tag }}">{% endfor %}
-  {% endif %}
+  {% endif %}-->
 </head>
