remove RDFa metadata

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,12 +9,12 @@
   <script src="/javascripts/scale.fix.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
-  <!-- RDFa Dublin Core Metadata -->
+  <!-- RDFa Dublin Core Metadata
   <meta property="dc:creator" content="DR3WH0" />
   <meta property="dc:title" content="DR3WH0 {% if page.title %} | {{ page.title }} {% endif %}" />
   <meta property="dc:type" content="Blog" />
   <meta property="dc:format" content="text/html" />
-  <meta property="dc:language" content="en" />
+  <meta property="dc:language" content="en" />-->
   <!--{% if page.tags %}
     {% for tag in page.tags %}<meta property="dc:subject" content="{{ tag }}">{% endfor %}
   {% endif %}-->
