remove dc prefix from head element

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<head prefix="dc: http://purl.org/dc/terms/">
+<head>
   <meta http-equiv="Content-Type" content="Type=text/html; charset=utf-8" />
   <meta name="author" content="DR3WH0">
   <!--{% if page.tags %}<meta name="keywords" content="{% for tag in page.tags %}{{ tag }}, {% endfor %}">{% endif %}
