Revert "html5 charset"
This reverts commit 34099e9a2b6f74d69fea102fa83901a225f58b49.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-  <meta charset="utf-8" />
+  <meta http-equiv="Content-Type" content="Type=text/html; charset=utf-8" />
   <meta name="author" content="DR3WH0">
   <!--{% if page.tags %}<meta name="keywords" content="{% for tag in page.tags %}{{ tag }}, {% endfor %}">{% endif %}
   {% else %}<meta name="keywords" content="Prose, Poetry, Photos, Music">{% endif %}-->
