--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<head>
+<head prefix="dc: http://purl.org/dc/terms/">
   <meta http-equiv="Content-Type" content="Type=text/html; charset=utf-8" />
   <meta name="author" content="DR3WH0">
   <meta name="keywords" content="Prose, Poetry, Photography, Music" />
@@ -8,4 +8,5 @@
   <script src="/javascripts/scale.fix.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
+  <meta property="dc:creator" content="DR3WH0" />
 </head>
