--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,15 @@
   <meta http-equiv="Content-Type" content="Type=text/html; charset=utf-8" />
   <meta name="author" content="DR3WH0">
   <meta name="keywords" content="Prose, Poetry, Photography, Music" />
-  <title>DR3WH0 {% if page.title %} | {{ page.title }} {% endif %}</title>
+  <title>DR3WH0{% if page.title %} | {{ page.title }} {% endif %}</title>
   <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css" media="screen" charset="utf-8"/>
   <link rel="icon" type="image/png" href="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_favicon.png"/>
   <script src="/javascripts/scale.fix.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
+  <!-- RDFa Dublin Core Metadata -->
   <meta property="dc:creator" content="DR3WH0" />
+  <meta property="dc:type" content="Blog" />
+  <meta property="dc:format" content="text/html" />
+  <meta property="dc:language" content="en" />
 </head>
