--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,8 @@
   <meta property="dc:type" content="Blog" />
   <meta property="dc:format" content="text/html" />
   <meta property="dc:language" content="en" />
+  <meta property="dc:title" content="DR3WH0{% if page.title %} | {{ page.title }}{% endif %}" />
   {% if page.tags %}
-    {% for tag in page.tags %}<meta property="dc:subject" content="{{ tag }}">{% endfor %}
+    {% for tag in page.tags %}<meta property="dc:subject" content="{{ tag }}" />{% endfor %}
   {% endif %}
 </head>
