--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
-<header>
+<header vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="http://dr3wh0.net#me">
   <h1 class="default"><a href="/index.html" title="Recent Transmissions"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" /> DR3WH0</a></h1>
   <h3>Time Travel &amp; Other Anomalies</h3>
   <p class="view"><a href="/archive.html" title="Thought Archive">Thoughts<small>&nbsp;-&nbsp;the master list</small></a>
   <p class="view"><a href="/radio.html" title="Radio Archive">Radio<small>&nbsp;-&nbsp;favorite tunes</small></a>
   <p class="view"><a href="/categories.html" title="Category List">Categories<small>&nbsp;-&nbsp;data herds</small></a>
   <p class="view"><a href="/tags.html" title="Tag List">Tags<small>&nbsp;-&nbsp;idea graffiti</small></a>
-  <p class="view"><a href="http://about.me/DR3WH0" title="DR3WH0: about.me">DR3WH0<small>&nbsp;-&nbsp;about.me</small></a>
+  <p class="view"><a property="account" href="http://about.me/DR3WH0" title="DR3WH0: about.me">DR3WH0<small>&nbsp;-&nbsp;about.me</small></a>
 </header>
