--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,5 +5,5 @@
   <p class="view"><a href="/radio.html" title="Radio Archive">Radio<small>&nbsp;-&nbsp;favorite tunes</small></a>
   <p class="view"><a href="/categories.html" title="Category List">Categories<small>&nbsp;-&nbsp;data herds</small></a>
   <p class="view"><a href="/tags.html" title="Tag List">Tags<small>&nbsp;-&nbsp;idea graffiti</small></a>
-  <p class="view"><a property="account" href="http://about.me/DR3WH0" title="DR3WH0: about.me">DR3WH0<small>&nbsp;-&nbsp;about.me</small></a>
+  <p class="view"><a property="account" href="http://about.me/DR3WH0" title="DR3WH0: about.me" target="tab">DR3WH0<small>&nbsp;-&nbsp;about.me</small></a>
 </header>
