--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
     {% endunless %}
   {% endif %}
 
-  {{content}}
+  <span property="articleBody">{{content}}</span>
 </article>
 
 <p style="text-align:right"><small><a href="/guestbook.html"><b>COMMENTS >>></b></a></small></p>
