--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="http://dr3wh0.net#me">
+<header vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="authorName">
   <h1 class="default"><a href="/index.html" title="Recent Transmissions"><img src="https://dl.dropboxusercontent.com/u/8239797/DR3WH0.png" alt="DR3WH0.png" height="42" width="42" /> DR3WH0</a></h1>
   <h3>Time Travel &amp; Other Anomalies</h3>
   <p class="view"><a href="/archive.html" title="Thought Archive">Thoughts<small>&nbsp;-&nbsp;the master list</small></a>
