--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article vocab="http://schema.org/" typeof="BlogPosting">
+<article vocab="http://schema.org/" typeof="BlogPosting" resource="{{ site.url }}{{ page.url }}">
   <h2 property="name">{{page.title}}</h2>
   <hr/>
 
