--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="authorName">
+<footer vocab="http://xmlns.com/foaf/0.1/" typeof="Person" resource="{{ site.url }}{{ page.url }}#author">
   <p><small><a href="/about.html" title="About This Site">ABOUT</a> | <a property="account" href="https://github.com/DR3WH0/DR3WH0.github.io" title="Source Code on GitHub" target="tab">SOURCE</a></small><br />
   <small><a property="account" href="http://statcounter.com/p9114352/?guest=1" title="StatCounter Statistics">DR3WH0 Statistics</a></small><br />
   <script src="/javascripts/statcounter.js"></script>
